--- a/rtl4332mqtt-interlogix-autodiscovery/config.json
+++ b/rtl4332mqtt-interlogix-autodiscovery/config.json
@@ -3,7 +3,7 @@
   "version": "0.1",
   "slug": "rtl4332mqtt-interlogix-autodiscovery",
   "description": "433MHz RF to MQTT Bridge based on RTL_SDR/RTL_433 for RTL2832U based DVB-T USB tuners",
-  "url": "https://github.com",
+  "url": "https://github.com/yannicklarrivee/homeassistant-addons-master",
   "startup": "before",
   "boot": "auto",
   "map": ["config:rw", "ssl"],
