--- a/rtl4332mqtt-interlogix-autodiscovery/Dockerfile
+++ b/rtl4332mqtt-interlogix-autodiscovery/Dockerfile
@@ -51,4 +51,4 @@ ENV MQTT_PASS="guest"
 ENV MQTT_TOPIC="homeassistant/sensor/rtl433"
 
 CMD cd / && cp /config/rtl4332mqtt-interlogix-autodiscovery/rtl2mqtt.sh /rtl2mqtt.sh && chmod +x /rtl2mqtt.sh && cp /config/rtl4332mqtt-interlogix-autodiscovery/rtl_433_mqtt_hass.py /rtl_433_mqtt_hass.py && rtl2mqtt.sh
-ls
+CMD ls
