--- a/rtl4332mqtt-interlogix-autodiscovery/config.json
+++ b/rtl4332mqtt-interlogix-autodiscovery/config.json
@@ -1,13 +1,13 @@
 {
   "name": "RTL_433 to MQTT Bridge with Interlogix auto-discovery",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "slug": "rtl4332mqtt-interlogix-autodiscovery",
   "description": "433MHz RF to MQTT Bridge based on RTL_SDR/RTL_433 for RTL2832U based DVB-T USB tuners",
   "url": "https://github.com/yannicklarrivee/homeassistant-addons-master",
   "startup": "before",
   "boot": "auto",
   "map": ["config:rw", "ssl"],
-  "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
+  "usb": true,
   "host_network": "False",
   "arch": [
     "aarch64",
