Update docker file to use custom rtl_433.

--- a/rtl4332mqtt-interlogix-autodiscovery/Dockerfile
+++ b/rtl4332mqtt-interlogix-autodiscovery/Dockerfile
@@ -28,8 +28,11 @@ RUN apk add --no-cache --virtual build-deps alpine-sdk cmake git libusb-dev && \
     make install && \
     chmod +s /usr/local/bin/rtl_* && \
     cd /tmp/src/ && \
-    git clone https://github.com/merbanan/rtl_433 && \
+#    git clone https://github.com/merbanan/rtl_433 && \
+    git clone https://github.com/yannicklarrivee/rtl_433 && \
     cd rtl_433/ && \
+    git fetch && \
+    git checkout develop && \
     mkdir build && \
     cd build && \
     cmake ../ && \
