--- a/tshark/config.json
+++ b/tshark/config.json
@@ -9,6 +9,7 @@
   "map": ["config:rw", "ssl"],
   "usb": true,
   "host_network": "true",
+  "privileged": ["SYS_ADMIN"]
   "arch": [
     "aarch64",
     "amd64",
