--- a/tshark/config.json
+++ b/tshark/config.json
@@ -1,6 +1,6 @@
 {
   "name": "tshark",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "slug": "tshark",
   "description": "Monitor network with tshark",
   "url": "https://github.com/yannicklarrivee/homeassistant-addons-master",
@@ -9,7 +9,7 @@
   "map": ["config:rw", "ssl","share"],
   "usb": true,
   "host_network": "true",
-  "privileged": ["SYS_ADMIN"],
+  "privileged": ["SYS_ADMIN","NET_ADMIN"],
   "arch": [
     "aarch64",
     "amd64",
