--- a/tshark/config.json
+++ b/tshark/config.json
@@ -1,15 +1,15 @@
 {
   "name": "tshark",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "slug": "tshark",
   "description": "Monitor network with tshark",
   "url": "https://github.com/yannicklarrivee/homeassistant-addons-master",
   "startup": "once",
   "boot": "manual",
-  "map": ["config:rw","share:rw"],
+  "map": ["config","share:rw"],
   "usb": true,
   "host_network": "true",
-  "privileged": ["SYS_ADMIN","NET_ADMIN"],
+  "privileged": ["NET_ADMIN"],
   "arch": [
     "aarch64",
     "amd64",
@@ -19,9 +19,9 @@
   "options":
   {
     "interface": "eth0",
-    "filter": "mdns and ip.src_host==homeassistant.local",
+    "filter": "host homeassistant.local",
     "pcap_file": "homeassistant.pcap",
-    "autostop": "duration:3600"
+    "autostop": "duration:60"
   },
   "schema":
   {
