--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .gitignore
 rtl4332mqtt-interlogix-autodiscovery/*.yaml
 dropbox-autodelete/.env
-dropbox-autodelete/test_data/options.json
+dropbox-autodelete/test_data/*
 dropbox-autodelete/local_build_and_run.sh
+tshark/local_build_and_run.sh
+tshark/.env
+tshark/test_data/*
