--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,23 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+orbs:
+  docker: circleci/docker@2.1.3
+  jobs:
+    build-and-publish-dropbox-autodelete-image:
+      - docker/publish:
+          after_build:
+            - run:
+                command: echo "Did this after the build"
+                name: Do this after the build
+          after_checkout:
+            - run:
+                command: echo "Did this after checkout"
+                name: Do this after checkout
+          before_build:
+            - run:
+                command: echo "Change directory" & cd dropbox-autodelete
+                name: Change directory
+          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/dropbox-autodelete    
 workflows:
-  say-hello-workflow:
+  build-and-publish-addons-images:
     jobs:
-      - say-hello
+      - build-and-publish-dropbox-autodelete-image
