--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,20 +3,20 @@ orbs:
   docker: circleci/docker@2.1.3
   jobs:
     build-and-publish-dropbox-autodelete-image:
-      - docker/publish:
-          after_build:
-            - run:
-                command: echo "Did this after the build"
-                name: Do this after the build
-          after_checkout:
-            - run:
-                command: echo "Did this after checkout"
-                name: Do this after checkout
-          before_build:
-            - run:
-                command: echo "Change directory" & cd dropbox-autodelete
-                name: Change directory
-          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/dropbox-autodelete    
+      docker/publish:
+        after_build:
+          - run:
+              command: echo "Did this after the build"
+              name: Do this after the build
+        after_checkout:
+          - run:
+              command: echo "Did this after checkout"
+              name: Do this after checkout
+        before_build:
+          - run:
+              command: echo "Change directory" & cd dropbox-autodelete
+              name: Change directory
+        image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/dropbox-autodelete    
 workflows:
   build-and-publish-addons-images:
     jobs:
