--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ orbs:
   docker: circleci/docker@2.1.3
 jobs:
   build-and-publish-dropbox-autodelete-image:
+    executor:
+      docker
     steps:
       - docker/publish:
           after_build:
