--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build-and-publish-dropbox-autodelete-image:
     executor: docker/docker
     steps:
-      - publish:
+      - docker/publish:
           after_build:
             - run:
                 command: echo "Did this after the build"
