--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,5 @@ workflows:
             - run:
                 command: echo "Change directory" & ls & cd $CIRCLE_WORKING_DIRECTORY/dropbox-autodelete & pwd
                 name: Change directory
-          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/dropbox-autodelete
+          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/dropbox-autodelet
+          path: $CIRCLE_WORKING_DIRECTORY/dropbox-autodelete/Dockerfile
