--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,4 @@ workflows:
                 command: echo "Change directory" & ls & cd $CIRCLE_WORKING_DIRECTORY/dropbox-autodelete & pwd
                 name: Change directory
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/dropbox-autodelete
-          path: $CIRCLE_WORKING_DIRECTORY/dropbox-autodelete
+          path: dropbox-autodelete
