First version of pipeline for all addons

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,15 @@ workflows:
           image: $DOCKER_LOGIN/dropbox-autodelete
           path: dropbox-autodelete
           docker-context: dropbox-autodelete
+      - docker/publish:
+          image: $DOCKER_LOGIN/oauth2-proxy
+          path: oauth2-proxy
+          docker-context: oauth2-proxy
+      - docker/publish:
+          image: $DOCKER_LOGIN/tshark
+          path: tshark
+          docker-context: tshark
+      - docker/publish:
+          image: $DOCKER_LOGIN/rtl4332mqtt-interlogix-autodiscovery
+          path: rtl4332mqtt-interlogix-autodiscovery
+          docker-context: rtl4332mqtt-interlogix-autodiscovery
