--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -29,13 +29,13 @@ http {
 
     #include /data/cloudflare.conf;
 	
-    server {
-        server_name _;
-        listen 80 default_server;
-        listen 443 ssl http2 default_server;
-        ssl_reject_handshake on;
-        return 444;
-    }
+    #server {
+        #server_name _;
+        #listen 80 default_server;
+        #listen 443 ssl http2 default_server;
+        #ssl_reject_handshake on;
+        #return 444;
+    #}
 
     server {
         server_name %%DOMAIN%%;
