--- a/rtl4332mqtt-interlogix-autodiscovery/config.json
+++ b/rtl4332mqtt-interlogix-autodiscovery/config.json
@@ -1,12 +1,16 @@
 {
   "name": "RTL_433 to MQTT Bridge with Interlogix auto-discovery",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "slug": "rtl4332mqtt-interlogix-autodiscovery",
   "description": "433MHz RF to MQTT Bridge based on RTL_SDR/RTL_433 for RTL2832U based DVB-T USB tuners",
   "url": "https://github.com/yannicklarrivee/homeassistant-addons-master",
   "startup": "before",
+  "image": "yannicklarrivee/armv7-rtl4332mqtt-interlogix-autodiscovery",
   "boot": "auto",
-  "map": ["config:rw", "ssl"],
+  "map": [
+    "config:rw",
+    "ssl"
+  ],
   "usb": true,
   "host_network": "False",
   "arch": [
@@ -15,8 +19,7 @@
     "armv7",
     "i386"
   ],
-  "options":
-  {
+  "options": {
     "mqtt_host": "homeassistant",
     "mqtt_user": "",
     "mqtt_password": "",
@@ -25,18 +28,27 @@
     "frequency": 319500000,
     "gain": 60,
     "frequency_offset": 350,
+    "radios": [],
     "sensors": []
   },
-  "schema":
-  {
+  "schema": {
     "mqtt_host": "str",
     "mqtt_user": "str",
     "mqtt_password": "str",
     "mqtt_topic": "str",
-    "protocol": "int",
-    "frequency": "int",
-    "gain": "int",
-    "frequency_offset": "int",
-    "sensors": [{"id":"str", "name":"str"}]
-   }
+    "radios": [
+      {
+        "protocol": "int",
+        "frequency": "int",
+        "gain": "int",
+        "frequency_offset": "int"
+      }
+    ],
+    "sensors": [
+      {
+        "id": "str",
+        "name": "str"
+      }
+    ]
+  }
 }
