--- a/rtl4332mqtt-interlogix-autodiscovery/config.json
+++ b/rtl4332mqtt-interlogix-autodiscovery/config.json
@@ -4,7 +4,7 @@
   "slug": "rtl4332mqtt-interlogix-autodiscovery",
   "description": "433MHz RF to MQTT Bridge based on RTL_SDR/RTL_433 for RTL2832U based DVB-T USB tuners",
   "url": "https://github.com/yannicklarrivee/homeassistant-addons-master",
-  "startup": "before",
+  "startup": "application",
   "image": "yannicklarrivee/armv7-rtl4332mqtt-interlogix-autodiscovery",
   "boot": "auto",
   "map": [
