--- a/rtl4332mqtt-interlogix-autodiscovery/config.json
+++ b/rtl4332mqtt-interlogix-autodiscovery/config.json
@@ -7,6 +7,7 @@
   "startup": "application",
   "image": "yannicklarrivee/armv7-rtl4332mqtt-interlogix-autodiscovery",
   "boot": "auto",
+  "init":"false",
   "map": [
     "config:rw",
     "ssl"
