--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,8 @@ workflows:
                 command: export ARCH=armv7 && PLATFORM=$(cat << matrix.path >>/build.yml | yq '.platform.[env(ARCH)]')
             - run:
                 command: TAG=$(cat << matrix.path >>/config.yml | yq '.version')   
-          name: Publish $ARCH-rtl4332mqtt-interlogix-autodiscovery addon
-          image: $DOCKER_LOGIN/$ARCH-rtl4332mqtt-interlogix-autodiscovery
+          name: Publish $ARCH-<< matrix.path >> addon
+          image: $DOCKER_LOGIN/$ARCH-<< matrix.path >>
           extra_build_args: --build-arg BUILD_FROM=ghcr.io/home-assistant/$ARCH-base:latest --platform $PLATFORM
           executor: arm-executor
           docker-context: << matrix.path >>
