--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,9 @@ workflows:
             - checkout
             - run:
                 command: TAG=$(cat ./<< matrix.path >>/config.yml | yq '.version') && echo $TAG  
-          name: Publish $(ARCH)-<< matrix.path >> addon
+          name: "Publish $ARCH-<< matrix.path >> addon"
           image: $DOCKER_LOGIN/$ARCH-<< matrix.path >>
-          extra_build_args: --build-arg BUILD_FROM=ghcr.io/home-assistant/$(ARCH)-base:latest --platform $PLATFORM
+          extra_build_args: --build-arg BUILD_FROM="ghcr.io/home-assistant/$ARCH-base:latest" --platform $PLATFORM
           executor: arm-executor
           docker-context: << matrix.path >>
           tag: $TAG
