--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,16 @@ workflows:
             - checkout
             - run:
                 command: TAG=$(cat ./<< matrix.path >>/config.yml | yq '.version') && echo $TAG  
-          name: "Publish $ARCH-<< matrix.path >> addon"
+          name: Publish $(ARCH)-<< matrix.path >> addon
+          before_build:
+            - checkout
+            - run:
+                command: export ARCH=armv7 && pwd && ls -ahl && PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '.platform.[env(ARCH)]') && echo $ARCH && echo $PLATFORM
+            - checkout
+            - run:
+                command: TAG=$(cat ./<< matrix.path >>/config.yml | yq '.version') && echo $TAG  
           image: $DOCKER_LOGIN/$ARCH-<< matrix.path >>
-          extra_build_args: --build-arg BUILD_FROM="ghcr.io/home-assistant/$ARCH-base:latest" --platform $PLATFORM
+          extra_build_args: --build-arg BUILD_FROM=ghcr.io/home-assistant/$(ARCH)-base:latest --platform $PLATFORM
           executor: arm-executor
           docker-context: << matrix.path >>
           tag: $TAG
