--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ workflows:
             - checkout
             - run:
                 command: TAG=$(cat ./<< matrix.path >>/config.yml | yq '.version') && echo $TAG  
-          name: Publish $(ARCH)-<< matrix.path >> addon
+          name: Publish $ARCH-<< matrix.path >> addon
           before_build:
             - checkout
             - run:
@@ -51,7 +51,7 @@ workflows:
             - run:
                 command: TAG=$(cat ./<< matrix.path >>/config.yml | yq '.version') && echo $TAG  
           image: $DOCKER_LOGIN/$ARCH-<< matrix.path >>
-          extra_build_args: --build-arg BUILD_FROM=ghcr.io/home-assistant/$(ARCH)-base:latest --platform $PLATFORM
+          extra_build_args: --build-arg BUILD_FROM=ghcr.io/home-assistant/$ARCH-base:latest --platform $PLATFORM
           executor: arm-executor
           docker-context: << matrix.path >>
           tag: $TAG
