--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,10 +35,12 @@ workflows:
           matrix:
             parameters:
               path: [rtl4332mqtt-interlogix-autodiscovery,tshark]
+          context:
+            - build-architecture
           pre-steps:
             - checkout
             - run:
-                command: export ARCH=armv7 && pwd && ls -ahl && PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '.platform.[env(ARCH)]') && echo $ARCH && echo $PLATFORM
+                command: ARCH=armv7 && pwd && ls -ahl && PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '.platform.[env(ARCH)]') && echo $ARCH && echo $PLATFORM
             - checkout
             - run:
                 command: TAG=$(cat ./<< matrix.path >>/config.yml | yq '.version') && echo $TAG  
@@ -46,7 +48,7 @@ workflows:
           before_build:
             - checkout
             - run:
-                command: export ARCH=armv7 && pwd && ls -ahl && PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '.platform.[env(ARCH)]') && echo $ARCH && echo $PLATFORM
+                command: ARCH=armv7 && pwd && ls -ahl && PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '.platform.[env(ARCH)]') && echo $ARCH && echo $PLATFORM
             - checkout
             - run:
                 command: TAG=$(cat ./<< matrix.path >>/config.yml | yq '.version') && echo $TAG  
