--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ workflows:
                 command: echo 'export PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq ''.platform.[env(ARCH)]'')' >> "$BASH_ENV"
             - checkout
             - run:
-                command: echo 'export TAG=$(cat ./<< matrix.path >>/config.yml | yq '\'.version\''')' >> "$BASH_ENV"
+                command: echo 'export TAG=$(cat ./<< matrix.path >>/config.yml | yq ''.version'')' >> "$BASH_ENV"
             - run:
                 command: echo $ARCH && echo $PLATFORM && echo $TAG
           name: Publish $ARCH-<< matrix.path >> addon
