--- a/nginx_proxy/build.yml
+++ b/nginx_proxy/build.yml
@@ -5,6 +5,12 @@ build_from:
   armhf: ghcr.io/home-assistant/armhf-base:3.14
   armv7: ghcr.io/home-assistant/armv7-base:3.14
   i386: ghcr.io/home-assistant/i386-base:3.14
+platform:
+  aarch64: linux/aarch64
+  amd64: linux/amd64
+  armhf: linux/armhf
+  armv7: linux/arm/v7
+  i386: linux/386
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
