--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ executors:
     machine:
       image: ubuntu-2004:current
     resource_class: arm.medium
+    steos:
+      - run:
+          command: echo 'export ARCH=armv7' >> "$BASH_ENV"
 orbs:
   docker: circleci/docker@2.1.3
   yq: nikkei/rnikkei-yq@0.0.3
@@ -24,8 +27,8 @@ workflows:
             - build-architecture
           pre-steps:
             - checkout
-            - run:
-                command: echo 'export ARCH=armv7' >> "$BASH_ENV"
+            # - run:
+            #     command: echo 'export ARCH=armv7' >> "$BASH_ENV"
             - run:
                 command: echo 'export PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '"'"'.platform.[env(ARCH)]'"'"')' >> "$BASH_ENV"
             - checkout
