--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ executors:
     machine:
       image: ubuntu-2004:current
     resource_class: arm.medium
-    steos:
+    steps:
       - run:
           command: echo 'export ARCH=armv7' >> "$BASH_ENV"
 orbs:
