Use multiple context

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,7 @@ workflows:
           matrix:
             parameters:
               path: [rtl4332mqtt-interlogix-autodiscovery,tshark,oauth2-proxy,dropbox-autodelete,nginx_proxy]
-          context:
-            - build-architecture
+              context: [build-architecture, build_aarch64]
           pre-steps:
             - checkout
             #- run:
