--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,21 +20,23 @@ workflows:
           matrix:
             parameters:
               path: [rtl4332mqtt-interlogix-autodiscovery,tshark,oauth2-proxy,dropbox-autodelete,nginx_proxy]
-              context: [build-architecture, build-aarch64]
+              context: [aarch64, amd64, armv7, i386]
           pre-steps:
             - checkout
             #- run:
             #    command: echo 'export ARCH=armv7' >> "$BASH_ENV"
+            #- run:
+            #    command: echo 'export PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '"'"'.platform.[env(ARCH)]'"'"')' >> "$BASH_ENV"
             - run:
-                command: echo 'export PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '"'"'.platform.[env(ARCH)]'"'"')' >> "$BASH_ENV"
+                command: echo 'export BASE_IMAGE=$(cat ./<< matrix.path >>/build.yml | yq '"'"'.build_from.[env(ARCH)]'"'"')' >> "$BASH_ENV"
             - checkout
             - run:
                 command: echo 'export TAG=$(cat ./<< matrix.path >>/config.yml | yq '"'"'.version'"'"')' >> "$BASH_ENV"
             - run:
                 command: echo $ARCH && echo $PLATFORM && echo $TAG
-          name: Publish $ARCH-<< matrix.context >>-<< matrix.path >> addon
+          name: Publish << matrix.context >>-<< matrix.path >> addon
           image: $DOCKER_LOGIN/$ARCH-<< matrix.path >>
-          extra_build_args: --build-arg BUILD_FROM=ghcr.io/home-assistant/$ARCH-base:latest --platform $PLATFORM
+          extra_build_args: --build-arg BUILD_FROM=$BASE_IMAGE --platform $PLATFORM
           executor: arm-executor
           docker-context: << matrix.path >>
           tag: $TAG
