--- a/oauth2-proxy/build.yml
+++ b/oauth2-proxy/build.yml
@@ -1,9 +1,9 @@
 build_from:
-  aarch64: ghcr.io/home-assistant/aarch64-base:3.14
-  amd64: ghcr.io/home-assistant/amd64-base:3.14
-  armhf: ghcr.io/home-assistant/armhf-base:3.14
-  armv7: ghcr.io/home-assistant/armv7-base:3.14
-  i386: ghcr.io/home-assistant/i386-base:3.14
+  aarch64: ghcr.io/home-assistant/aarch64-base:latest
+  amd64: ghcr.io/home-assistant/amd64-base:latest
+  armhf: ghcr.io/home-assistant/armhf-base:latest
+  armv7: ghcr.io/home-assistant/armv7-base:latest
+  i386: ghcr.io/home-assistant/i386-base:latest
 platform:
   aarch64: linux/aarch64
   amd64: linux/amd64
