--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,10 @@ executors:
     machine:
       image: ubuntu-2004:current
     resource_class: arm.medium
+  amd-executor:
+    machine:
+      image: ubuntu-2004:current
+    resource_class: medium
 orbs:
   docker: circleci/docker@2.1.3
   yq: nikkei/rnikkei-yq@0.0.3
@@ -25,8 +29,8 @@ workflows:
             - checkout
             #- run:
             #    command: echo 'export ARCH=armv7' >> "$BASH_ENV"
-            #- run:
-            #    command: echo 'export PLATFORM=$(cat ./<< matrix.path >>/build.yml | yq '"'"'.platform.[env(ARCH)]'"'"')' >> "$BASH_ENV"
+            - run:
+                command: echo 'export EXECUTOR=$(cat ./<< matrix.path >>/build.yml | yq '"'"'.executor.[env(ARCH)]'"'"')' >> "$BASH_ENV"
             - run:
                 command: echo 'export BASE_IMAGE=$(cat ./<< matrix.path >>/build.yml | yq '"'"'.build_from.[env(ARCH)]'"'"')' >> "$BASH_ENV"
             - checkout
@@ -37,6 +41,6 @@ workflows:
           name: Publish << matrix.context >>-<< matrix.path >> addon
           image: $DOCKER_LOGIN/$ARCH-<< matrix.path >>
           extra_build_args: --build-arg BUILD_FROM=$BASE_IMAGE --platform $PLATFORM
-          executor: arm-executor
+          executor: $EXECUTOR
           docker-context: << matrix.path >>
           tag: $TAG
