--- a/nginx_proxy/build.yml
+++ b/nginx_proxy/build.yml
@@ -1,16 +1,15 @@
----
 build_from:
   aarch64: ghcr.io/home-assistant/aarch64-base:3.14
   amd64: ghcr.io/home-assistant/amd64-base:3.14
   armhf: ghcr.io/home-assistant/armhf-base:3.14
   armv7: ghcr.io/home-assistant/armv7-base:latest
   i386: ghcr.io/home-assistant/i386-base:3.14
-platform:
-  aarch64: linux/aarch64
-  amd64: linux/amd64
-  armhf: linux/armhf
-  armv7: linux/arm/v7
-  i386: linux/386
+executor:
+  aarch64: arm-executor
+  amd64: amd-executor
+  armhf: arm-executor
+  armv7: arm-executor
+  i386: amd-executor
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
