--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ workflows:
             - run:
                 command: echo 'export TAG=$(cat ./<< matrix.path >>/config.yml | yq '"'"'.version'"'"')' >> "$BASH_ENV"
             - run:
-                command: echo $ARCH && echo $PLATFORM && echo $TAG && $EXECUTOR
+                command: echo $ARCH && echo $PLATFORM && echo $TAG && echo $EXECUTOR
           name: Publish << matrix.context >>-<< matrix.path >> addon
           image: $DOCKER_LOGIN/$ARCH-<< matrix.path >>
           extra_build_args: --build-arg BUILD_FROM=$BASE_IMAGE --platform $PLATFORM
