--- a/nginx_proxy/build.yml
+++ b/nginx_proxy/build.yml
@@ -1,15 +1,9 @@
 build_from:
-  aarch64: ghcr.io/home-assistant/aarch64-base:3.14
-  amd64: ghcr.io/home-assistant/amd64-base:3.14
-  armhf: ghcr.io/home-assistant/armhf-base:3.14
+  aarch64: ghcr.io/home-assistant/aarch64-base:latest
+  amd64: ghcr.io/home-assistant/amd64-base:latest
+  armhf: ghcr.io/home-assistant/armhf-base:latest
   armv7: ghcr.io/home-assistant/armv7-base:latest
-  i386: ghcr.io/home-assistant/i386-base:3.14
-executor:
-  aarch64: arm-executor
-  amd64: amd-executor
-  armhf: arm-executor
-  armv7: arm-executor
-  i386: amd-executor
+  i386: ghcr.io/home-assistant/i386-base:latest
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
