--- a/rtl4332mqtt-interlogix-autodiscovery/build.yml
+++ b/rtl4332mqtt-interlogix-autodiscovery/build.yml
@@ -4,7 +4,7 @@ build_from:
   armhf: ghcr.io/home-assistant/armhf-base:3.14
   armv7: ghcr.io/home-assistant/armv7-base:3.14
   i386: ghcr.io/home-assistant/i386-base:3.14
-platform:
+executor:
   aarch64: linux/aarch64
   amd64: linux/amd64
   armhf: linux/armhf
