--- a/nginx_proxy/build.yml
+++ b/nginx_proxy/build.yml
@@ -3,7 +3,7 @@ build_from:
   amd64: ghcr.io/home-assistant/amd64-base:latest
   armhf: ghcr.io/home-assistant/armhf-base:latest
   armv7: ghcr.io/home-assistant/armv7-base:latest
-  i386: ghcr.io/home-assistant/i386-base:latest
+  i386: ghcr.io/home-assistant/i386-base:3.14
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
