--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ executors:
 orbs:
   docker: circleci/docker@2.1.3
   yq: nikkei/rnikkei-yq@0.0.3
+  path-filtering: circleci/path-filtering@0.1.3
 jobs:
   install-yq:
     executor: arm-executor
@@ -23,7 +24,7 @@ workflows:
       - docker/publish:
           matrix:
             parameters:
-              path: [rtl4332mqtt-interlogix-autodiscovery,tshark,oauth2-proxy,dropbox-autodelete,nginx_proxy]
+              path: [rtl4332mqtt-interlogix-autodiscovery,tshark,oauth2-proxy,dropbox-autodelete,nginx_proxy,voipms-mms]
               context: [aarch64, amd64, armv7, i386]
               executor: [arm-executor, amd-executor]
             exclude:
@@ -85,6 +86,18 @@ workflows:
                 context: amd64
                 executor: arm-executor
               - path: nginx_proxy
+                context: i386
+                executor: arm-executor
+              - path: voipms-mms
+                context: aarch64
+                executor: amd-executor
+              - path: voipms-mms
+                context: armv7
+                executor: amd-executor
+              - path: voipms-mms
+                context: amd64
+                executor: arm-executor
+              - path: voipms-mms
                 context: i386
                 executor: arm-executor
           pre-steps:
