Deploy with docker image

--- a/voipms-mms/config.yml
+++ b/voipms-mms/config.yml
@@ -1,5 +1,5 @@
 name: voipms-mms
-version: 0.1.0
+version: 0.2.0
 slug: voipms-mms
 description: 'Start voipms-mms service to send a sms.'
 url: 'https://github.com/yannicklarrivee/homeassistant-addons-master'
@@ -14,13 +14,12 @@ arch:
     - amd64
     - armv7
     - i386
+image: yannicklarrivee/{arch}-voipms-mms
 options:
     api_username: xxxxxxxx
     api_password: xxxxxxxxx
     did: xxxxxxx
-    destination: xxxxxxx
 schema:
     api_username: str
     api_password: str
     did: str
-    destination: str
