--- a/voipms-mms/config.yml
+++ b/voipms-mms/config.yml
@@ -1,12 +1,15 @@
 name: voipms-mms
-version: 0.3.0
+version: 0.4.0
 slug: voipms-mms
 description: 'Start voipms-mms service to send a sms.'
 url: 'https://github.com/yannicklarrivee/homeassistant-addons-master'
 startup: application
 boot: auto
-init: 'false'
-stdin: 'true'
+init: false
+stdin: true
+hassio_api: true
+hassio_role: default
+homeassistant_api: true
 map:
     - config
     - 'share:rw'
