--- a/dropbox-sync/config.yml
+++ b/dropbox-sync/config.yml
@@ -1,5 +1,5 @@
 name: 'Dropbox Sync'
-version: 0.0.2
+version: 0.0.3
 slug: dropbox_sync
 description: 'Upload your Hass.io backups to Dropbox'
 url: 'https://github.com/yannicklarrivee/homeassistant-addons-master'
@@ -7,6 +7,7 @@ startup: before
 arch:
     - aarch64
     - amd64
+    - armv7
     - i386
 stdin: true
 hassio_api: true
