--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
   amd-executor:
     machine:
       image: ubuntu-2004:current
-    resource_class: medium
+    resource_class: medium+
 orbs:
   docker: circleci/docker@2.1.3
   yq: nikkei/rnikkei-yq@0.0.3
@@ -24,7 +24,7 @@ workflows:
       - docker/publish:
           matrix:
             parameters:
-              path: [rtl4332mqtt-interlogix-autodiscovery,tshark,oauth2-proxy,dropbox-autodelete,nginx_proxy,voipms-mms]
+              path: [rtl4332mqtt-interlogix-autodiscovery,tshark,oauth2-proxy,dropbox-autodelete,nginx_proxy,voipms-mms,dropbox-sync]
               context: [aarch64, amd64, armv7, i386]
               executor: [arm-executor, amd-executor]
             exclude:
@@ -98,6 +98,18 @@ workflows:
                 context: amd64
                 executor: arm-executor
               - path: voipms-mms
+                context: i386
+                executor: arm-executor
+              - path: dropbox-sync
+                context: aarch64
+                executor: amd-executor
+              - path: dropbox-sync
+                context: armv7
+                executor: amd-executor
+              - path: dropbox-sync
+                context: amd64
+                executor: arm-executor
+              - path: dropbox-sync
                 context: i386
                 executor: arm-executor
           pre-steps:
