--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
   amd-executor:
     machine:
       image: ubuntu-2004:current
-    resource_class: medium+
+    resource_class: medium
 orbs:
   docker: circleci/docker@2.1.3
   yq: nikkei/rnikkei-yq@0.0.3
