--- a/dropbox-sync/config.yml
+++ b/dropbox-sync/config.yml
@@ -1,5 +1,5 @@
 name: 'Dropbox Sync'
-version: 0.0.3
+version: 0.0.4
 slug: dropbox_sync
 description: 'Upload your Hass.io backups to Dropbox'
 url: 'https://github.com/yannicklarrivee/homeassistant-addons-master'
@@ -24,4 +24,4 @@ schema:
     output: str
     keep_last: 'int(0,)?'
     filetypes: 'str?'
-image: 'yannicklarrivee/dropbox-sync-{arch}'
+image: 'yannicklarrivee/{arch}-dropbox-sync'
