--- a/dropbox-sync/config.yml
+++ b/dropbox-sync/config.yml
@@ -1,9 +1,10 @@
 name: 'Dropbox Sync'
-version: 0.0.4
+version: 0.0.5
 slug: dropbox_sync
 description: 'Upload your Hass.io backups to Dropbox'
 url: 'https://github.com/yannicklarrivee/homeassistant-addons-master'
 startup: before
+init: 'false'
 arch:
     - aarch64
     - amd64
