--- a/dropbox-sync/build.yml
+++ b/dropbox-sync/build.yml
@@ -1,7 +1,7 @@
 build_from:
-  aarch64: ghcr.io/home-assistant/aarch64-base:latest
-  amd64: ghcr.io/home-assistant/amd64-base:latest
-  armv7: ghcr.io/home-assistant/armv7-base:latest
+  aarch64: ghcr.io/home-assistant/aarch64-base:3.12
+  amd64: ghcr.io/home-assistant/amd64-base:3.12
+  armv7: ghcr.io/home-assistant/armv7-base:3.12
   i386: ghcr.io/home-assistant/i386-base:3.12
 codenotary:
   signer: notary@home-assistant.io
