--- a/dropbox-sync/config.yml
+++ b/dropbox-sync/config.yml
@@ -1,9 +1,10 @@
 name: 'Dropbox Sync'
-version: 0.0.9
+version: 0.0.10
 slug: dropbox_sync
 description: 'Upload your Hass.io backups to Dropbox'
 url: 'https://github.com/yannicklarrivee/homeassistant-addons-master'
 startup: before
+homeassistant_api: true
 init: 'false'
 arch:
     - aarch64
