--- a/dropbox-sync/config.yml
+++ b/dropbox-sync/config.yml
@@ -1,5 +1,5 @@
 name: 'Dropbox Sync'
-version: 0.0.13
+version: 0.0.14
 slug: dropbox_sync
 description: 'Upload your Hass.io backups to Dropbox'
 url: 'https://github.com/yannicklarrivee/homeassistant-addons-master'
@@ -13,7 +13,7 @@ arch:
     - i386
 stdin: true
 hassio_api: true
-hassio_role: default
+hassio_role: manager
 boot: auto
 map:
     - backup
