--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -9,7 +9,7 @@ events {
 }
 
 http {
-    js_include hass_auth_script.js;
+    js_import hass_auth_script.js;
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ''      close;
@@ -106,7 +106,7 @@ http {
                 auth_request /oauth2/auth;
                 error_page 401 = /oauth2/sign_in;
                 auth_request_set $email $upstream_http_x_auth_request_email;
-                js_content get_token;
+                js_content hass_auth_script.get_token;
             }
         
             location /api {
